--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "filepond": "^4.30.4",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
